[gd_scene load_steps=9 format=3 uid="uid://bdkh5n42abtlg"]

[ext_resource type="PackedScene" uid="uid://jyncanbkjjnq" path="res://player/player.tscn" id="1_lifw2"]
[ext_resource type="Texture2D" uid="uid://bncvkmvao7hnr" path="res://programmerart/film.png" id="2_mvm06"]
[ext_resource type="PackedScene" uid="uid://b3rjydnrybjy5" path="res://programmerart/cactus_col.tscn" id="2_stcry"]
[ext_resource type="PackedScene" uid="uid://d2hj04av6wa6k" path="res://programmerart/animals/bear_coll.tscn" id="3_uq144"]
[ext_resource type="Script" uid="uid://d2prupksdovq7" path="res://ui.gd" id="4_vmuxp"]

[sub_resource type="BoxMesh" id="BoxMesh_a0tk4"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_r3fl7"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_a0tk4"]
width = 95
height = 70

[node name="forest" type="Node3D"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="World" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(900, 600)
render_target_update_mode = 4

[node name="Player" parent="SubViewportContainer/World" instance=ExtResource("1_lifw2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.0958216)

[node name="Floor" type="MeshInstance3D" parent="SubViewportContainer/World"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -1.2643508, 0)
mesh = SubResource("BoxMesh_a0tk4")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/World/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/World/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_r3fl7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/World"]
transform = Transform3D(1, 0, 0, 0, 0.73263806, 0.6806185, 0, -0.6806185, 0.73263806, 3.8745143, 11.156533, 2.1968136)

[node name="cactus_tall" parent="SubViewportContainer/World" instance=ExtResource("2_stcry")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 3.7255216, -0.71435076, -3.5212069)

[node name="cactus_tall2" parent="SubViewportContainer/World" instance=ExtResource("2_stcry")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.4070468, -0.71435076, -3.5212069)

[node name="cactus_tall3" parent="SubViewportContainer/World" instance=ExtResource("2_stcry")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.4070468, -0.71435076, -10.163826)

[node name="cactus_tall4" parent="SubViewportContainer/World" instance=ExtResource("2_stcry")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 8.732435, -0.71435076, -10.163826)

[node name="Bear_Rig" parent="SubViewportContainer/World" instance=ExtResource("3_uq144")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.716468, -0.74354476, -9.554995)

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5089555, 2.2386918, -0.9491713)
light_color = Color(0, 1, 1, 1)

[node name="OmniLight3D2" type="OmniLight3D" parent="SubViewportContainer/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.6269312, -0.09861851, -0.9491713)
light_color = Color(1, 0, 1, 1)

[node name="OmniLight3D3" type="OmniLight3D" parent="SubViewportContainer/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.229879, -0.09861851, 0.7009027)
light_color = Color(0, 1, 0, 1)

[node name="UIRender" type="Control" parent="." node_paths=PackedStringArray("picSpots")]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
script = ExtResource("4_vmuxp")
picSpots = [NodePath("PicSpot5/Pic"), NodePath("PicSpot4/Pic"), NodePath("PicSpot3/Pic"), NodePath("PicSpot2/Pic"), NodePath("PicSpot/Pic")]

[node name="PicTotal" type="Label" parent="UIRender"]
layout_mode = 0
offset_left = 665.0
offset_top = 1.0
offset_right = 898.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 30
text = "df"
horizontal_alignment = 2

[node name="PicSpot" type="TextureRect" parent="UIRender"]
layout_mode = 0
offset_left = 800.0
offset_top = 106.0
offset_right = 1006.0
offset_bottom = 290.0
texture = ExtResource("2_mvm06")
stretch_mode = 2

[node name="Pic" type="TextureRect" parent="UIRender/PicSpot"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 527.0
texture = SubResource("NoiseTexture2D_a0tk4")
stretch_mode = 2

[node name="PicSpot2" type="TextureRect" parent="UIRender"]
layout_mode = 0
offset_left = 800.0
offset_top = 204.0
offset_right = 1006.0
offset_bottom = 388.0
texture = ExtResource("2_mvm06")
stretch_mode = 2

[node name="Pic" type="TextureRect" parent="UIRender/PicSpot2"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 527.0
texture = SubResource("NoiseTexture2D_a0tk4")
stretch_mode = 2

[node name="PicSpot3" type="TextureRect" parent="UIRender"]
layout_mode = 0
offset_left = 800.0
offset_top = 302.0
offset_right = 1006.0
offset_bottom = 486.0
texture = ExtResource("2_mvm06")
stretch_mode = 2

[node name="Pic" type="TextureRect" parent="UIRender/PicSpot3"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 527.0
texture = SubResource("NoiseTexture2D_a0tk4")
stretch_mode = 2

[node name="PicSpot4" type="TextureRect" parent="UIRender"]
layout_mode = 0
offset_left = 800.0
offset_top = 402.0
offset_right = 1006.0
offset_bottom = 586.0
texture = ExtResource("2_mvm06")
stretch_mode = 2

[node name="Pic" type="TextureRect" parent="UIRender/PicSpot4"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 527.0
texture = SubResource("NoiseTexture2D_a0tk4")
stretch_mode = 2

[node name="PicSpot5" type="TextureRect" parent="UIRender"]
layout_mode = 0
offset_left = 800.0
offset_top = 501.0
offset_right = 1006.0
offset_bottom = 685.0
texture = ExtResource("2_mvm06")
stretch_mode = 2

[node name="Pic" type="TextureRect" parent="UIRender/PicSpot5"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 527.0
texture = SubResource("NoiseTexture2D_a0tk4")
stretch_mode = 2
